[gd_scene load_steps=19 format=3 uid="uid://wb0i0hkc5v7"]

[ext_resource type="Texture2D" uid="uid://bla6kqfkwxhyd" path="res://TileSetBrickFactory.png" id="1_0ugo5"]
[ext_resource type="Script" uid="uid://jth8fq0f0ubd" path="res://Scenes/level_complete_ui.gd" id="2_pdbcj"]
[ext_resource type="FontFile" uid="uid://cfekbwmuco8hc" path="res://04B_03B_.TTF" id="4_1ck8r"]
[ext_resource type="Texture2D" uid="uid://dtmbby5ywblel" path="res://HUD/levelcomplete/top-levelcomplete.png" id="5_n7kxf"]
[ext_resource type="Texture2D" uid="uid://ltisshnvfsax" path="res://HUD/levelcomplete/bottom-levelcomplete.png" id="6_1ck8r"]
[ext_resource type="Texture2D" uid="uid://dwwmvquyw5wea" path="res://HUD/levelcomplete/nextlevelbutton.png" id="6_mui1v"]
[ext_resource type="AudioStream" uid="uid://4d25ksltvyn2" path="res://audio/sfx/metal-door-closing.ogg" id="7_1ck8r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1ck8r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_m78vo"]
atlas = ExtResource("1_0ugo5")
region = Rect2(208, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ryf15"]
atlas = ExtResource("1_0ugo5")
region = Rect2(208, 144, 32, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mmixe"]
texture = SubResource("AtlasTexture_ryf15")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="AtlasTexture" id="AtlasTexture_g0wmg"]
atlas = ExtResource("1_0ugo5")
region = Rect2(176, 128, 32, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4vbiv"]
texture = SubResource("AtlasTexture_g0wmg")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="AtlasTexture" id="AtlasTexture_3r70p"]
atlas = ExtResource("1_0ugo5")
region = Rect2(176, 144, 32, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8fs27"]
texture = SubResource("AtlasTexture_3r70p")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="Animation" id="Animation_ryf15"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-360, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BackgroundContainer/Control:custom_minimum_size:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.0005, 0, 0.0005, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BackgroundContainer/Control:custom_minimum_size:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(360, -0.0005, 0, 0.0005, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Closing sounds:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ItemsContainer/StatsContainer:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ItemsContainer/TextureRect:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_smcll"]
resource_name = "reveal"
length = 10.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(-360, -0.25, 0, 0.431482, -1.5, 0, -0.0333333, -112.5, 0.0841663, -166.5, -0.5, -0.149167, -147.5, 0.0314822, -53, 0.5, -0.0351845, -41, 0.25, 0),
"times": PackedFloat32Array(0, 0.6, 1.06667, 1.33333)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("BackgroundContainer/Control:custom_minimum_size:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BackgroundContainer/Control:custom_minimum_size:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(360, -0.25, 0, 0.766667, -36.362, 0, -0.0666666, 126.858, 0.266667, 22.8752, 0, -0.366667, 18.3594, 0.25, 0),
"times": PackedFloat32Array(0, 2.06667, 3.2)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Closing sounds:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ItemsContainer/StatsContainer:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 3.99037, 4.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ItemsContainer/TextureRect:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 4.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mmixe"]
_data = {
&"RESET": SubResource("Animation_ryf15"),
&"reveal": SubResource("Animation_smcll")
}

[node name="LevelCompleteContainer" type="PanelContainer"]
custom_minimum_size = Vector2(0, 720)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -180.0
offset_right = 16.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_1ck8r")
script = ExtResource("2_pdbcj")

[node name="BackgroundContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 0
alignment = 1

[node name="TopBackground" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 2
texture = ExtResource("5_n7kxf")

[node name="Control" type="Control" parent="BackgroundContainer"]
custom_minimum_size = Vector2(0, 360)
layout_mode = 2

[node name="BottomBackground" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 2
texture = ExtResource("6_1ck8r")

[node name="ItemsContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 360)
layout_mode = 2
size_flags_vertical = 4
alignment = 2

[node name="StatsContainer" type="HBoxContainer" parent="ItemsContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
alignment = 1

[node name="CollectablesContainer" type="VBoxContainer" parent="ItemsContainer/StatsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ItemsContainer/StatsContainer/CollectablesContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.68246, 0.737163, 0.757198, 1)
theme_override_fonts/font = ExtResource("4_1ck8r")
theme_override_font_sizes/font_size = 16
text = "Nuts"
uppercase = true

[node name="CollectiblesNumberContainer" type="HBoxContainer" parent="ItemsContainer/StatsContainer/CollectablesContainer"]
layout_mode = 2

[node name="CollectibleIcon" type="TextureRect" parent="ItemsContainer/StatsContainer/CollectablesContainer/CollectiblesNumberContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_m78vo")

[node name="TotalCollectibles" type="Label" parent="ItemsContainer/StatsContainer/CollectablesContainer/CollectiblesNumberContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.682353, 0.737255, 0.756863, 1)
theme_override_fonts/font = ExtResource("4_1ck8r")
text = "0"

[node name="Spacer" type="Control" parent="ItemsContainer/StatsContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2

[node name="LevelTimeContainer" type="VBoxContainer" parent="ItemsContainer/StatsContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="ItemsContainer/StatsContainer/LevelTimeContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.682353, 0.737255, 0.756863, 1)
theme_override_fonts/font = ExtResource("4_1ck8r")
theme_override_font_sizes/font_size = 16
text = "Time"
horizontal_alignment = 1
uppercase = true

[node name="TotalTime" type="Label" parent="ItemsContainer/StatsContainer/LevelTimeContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.682353, 0.737255, 0.756863, 1)
theme_override_fonts/font = ExtResource("4_1ck8r")
theme_override_font_sizes/font_size = 16
text = "00.00.000"

[node name="Spacer2" type="Control" parent="ItemsContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ContinueButton" type="Button" parent="ItemsContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_color = Color(0.219333, 0.211521, 0.254994, 1)
theme_override_colors/font_color = Color(1, 0.756863, 0.027451, 1)
theme_override_colors/font_focus_color = Color(0.219333, 0.211521, 0.254994, 1)
theme_override_colors/font_pressed_color = Color(1, 0.8625, 0.45, 1)
theme_override_fonts/font = ExtResource("4_1ck8r")
theme_override_styles/focus = SubResource("StyleBoxTexture_mmixe")
theme_override_styles/hover = SubResource("StyleBoxTexture_mmixe")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4vbiv")
theme_override_styles/normal = SubResource("StyleBoxTexture_8fs27")
text = "CONTINUE"

[node name="TextureRect" type="TextureRect" parent="ItemsContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
texture = ExtResource("6_mui1v")
stretch_mode = 5

[node name="Spacer3" type="Control" parent="ItemsContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ContainerRevealer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_mmixe")
}

[node name="Closing sounds" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_1ck8r")
volume_db = -5.0

[connection signal="pressed" from="ItemsContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
